--- a/index.html
+++ b/index.html
@@ -3,24 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pomodoro Timer</title>
+  <title>Pomo-Bloom</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>study with me.io</h1>
-    <div class="mode-buttons">
-      <button id="pomodoro" class="active">pomodoro</button>
-      <button id="short-break">short break</button>
-      <button id="long-break">long break</button>
+    <div class="logo">
+        <img src="Star.png" class="star">
+      <h1>POMO-BLOOM</h1>
     </div>
-    <div class="timer" id="timer-display">25:00</div>
-    <div class="controls">
-      <button id="start">start</button>
-      <button id="reset">&#8635;</button>
+    <div class="timer-container">
+      <div class="modes">
+        <button id="pomodoro" class="mode-button active">pomodoro</button>
+        <button id="short-break" class="mode-button">short-break</button>
+        <button id="long-break" class="mode-button">long-break</button>
+      </div>
+      <div id="timer" class="timer">25:00</div>
+      <div class="controls">
+        <button id="start" class="control-button">start</button>
+        <button id="reset" class="control-button">reset</button>
+      </div>
+    </div>
+    <div class="flow-indicator">
+      <div class="circle active"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
     </div>
   </div>
-
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
