--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
       <div class="circle"></div>
       <div class="circle"></div>
     </div>
+    <div class="todo-section">
+      <h2>Action items for your focus mode:</h2>
+      <div class="todo-input-container">
+        <input type="text" class="todo-input" placeholder="Add a new task...">
+        <button class="add-todo-btn">Add</button>
+      </div>
+      <div class="todo-list">
+        <!-- Todo items will be added here dynamically -->
+      </div>
+    </div>
   </div>
   <script src="script.js" defer></script>
 </body>
